// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge demo -- badge 1`] = `
.c30 {
  position: relative;
  display: inline-block;
}

.c31 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c28 {
  margin-right: 8px;
  font-size: 14px;
}

.c26 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c26 .c27 {
  color: #4074e1;
}

.c29 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c24 .c25,
.c24 .style__RadioTagWrap-sc-25j3mq-3,
.c24 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
}

.c24 .c25:last-child,
.c24 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c24 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c24 .c32 {
  margin-right: -1px;
}

.c24 .c32:first-child {
  border-radius: 2px 0 0 2px;
}

.c24 .c32:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c6 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c6 input {
  border: 1px solid #c3cad9;
  background: #fff;
  height: 28px;
}

.c6 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c6 input::-moz-placeholder {
  color: #abb4c3;
}

.c6 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c6 input::placeholder {
  color: #abb4c3;
}

.c6 input:hover {
  border-color: #4683e6;
}

.c6 input:focus {
  border-color: #4683e6;
}

.c6 .c33 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c11 {
  position: relative;
}

.c13 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
}

.c9 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c7 .c12 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c7 .c12::-webkit-input-placeholder {
  color: #abb4c3;
}

.c7 .c12::-moz-placeholder {
  color: #abb4c3;
}

.c7 .c12:-ms-input-placeholder {
  color: #abb4c3;
}

.c7 .c12::placeholder {
  color: #abb4c3;
}

.c7:hover {
  border-color: #4683e6;
}

.c7 .c12 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c7 .c8,
.c7 .c10 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c7 .c8:hover,
.c7 .c10:hover {
  color: #4074e1;
}

.c7 .c8 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c7 .c10 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #4683e6;
}

.c14 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        value
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <span
          class="c6"
        >
          <input
            value="1"
          />
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        maxValue
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c7"
        >
          <div>
            <span
              class="c8 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up "
                type="caret-up"
              />
            </span>
            <span
              class="c10 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down "
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c11"
          >
            <input
              autocomplete="off"
              class="c12 uc-fe-numberinput-input c13"
              min="-9007199254740991"
              step="1"
              value="99"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        dot
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        hideWhenZero
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        noneContent
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        placement
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c24"
        >
          <div
            checked=""
            class="c25 c26"
          >
            <i
              class="c27 c28 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            topRight
          </div>
          <div
            class="c25 c29"
          >
            <i
              class="c27 c28 uc-fe-icon icon__circle "
              type="circle"
            />
            topLeft
          </div>
          <div
            class="c25 c29"
          >
            <i
              class="c27 c28 uc-fe-icon icon__circle "
              type="circle"
            />
            bottomRight
          </div>
          <div
            class="c25 c29"
          >
            <i
              class="c27 c28 uc-fe-icon icon__circle "
              type="circle"
            />
            bottomLeft
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        badgeStyle.color
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        badgeStyle.background
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-badge c30"
      style="margin:10px;"
    >
      <div
        style="width:50px;height:50px;background:#ddd;"
      />
      <div
        style="position:absolute;"
      >
        <span
          class="uc-fe-badge-badge c31"
        >
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customStyle 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c2 {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: unset;
  min-height: unset;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge c1"
        style="background:white;color:black;border:1px solid #ddd;"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge-dot c2 uc-fe-badge-badge c1"
        style="background:blue;"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customValue 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge c1"
      >
        string
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge c1"
      >
        <span
          style="font-weight:bolder;"
        >
          node
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- dot 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c2 {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: unset;
  min-height: unset;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge-dot c2 uc-fe-badge-badge c1"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- hideWhenZero 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge c1"
      >
        0
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
  </div>
</div>
`;

exports[`Badge demo -- maxValue 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge c1"
      >
        10
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge c1"
      >
        9+
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- noneContent 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <span
      class="uc-fe-badge-badge c1"
    >
      99+
    </span>
  </div>
</div>
`;

exports[`Badge demo -- placement 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge c1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      style="position:absolute;"
    >
      <span
        class="uc-fe-badge-badge c1"
      >
        99+
      </span>
    </div>
  </div>
</div>
`;
